// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Estrutura exibe o botão acompanhando o tamanho do conteúdo interno 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Button
    block={false}
    rounded={true}
    size="normal"
    styleType="primary"
  >
    Text
  </Button>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "activeOpacity": 0.2,
      "children": <View
        style={
          Object {
            "alignSelf": "center",
            "backgroundColor": "#40cd28",
            "borderRadius": 5,
            "elevation": 3,
            "flexDirection": "row",
            "margin": 0,
            "maxWidth": "100%",
            "overflow": "hidden",
          }
        }
      >
        <Unknown
          style={
            Object {
              "color": "#fff",
              "flex": 0,
              "fontSize": 24,
              "marginBottom": 0,
              "padding": 10,
              "textAlign": "center",
            }
          }
        >
          Text
        </Unknown>
      </View>,
      "disabled": undefined,
      "onPress": undefined,
      "style": Object {
        "alignSelf": "center",
        "borderRadius": 5,
        "maxWidth": "100%",
        "shadowColor": "#ccc",
        "shadowOffset": Object {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 1,
        "shadowRadius": 1,
      },
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <Unknown
          style={
            Object {
              "color": "#fff",
              "flex": 0,
              "fontSize": 24,
              "marginBottom": 0,
              "padding": 10,
              "textAlign": "center",
            }
          }
        >
          Text
        </Unknown>,
        "style": Object {
          "alignSelf": "center",
          "backgroundColor": "#40cd28",
          "borderRadius": 5,
          "elevation": 3,
          "flexDirection": "row",
          "margin": 0,
          "maxWidth": "100%",
          "overflow": "hidden",
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": "Text",
          "style": Object {
            "color": "#fff",
            "flex": 0,
            "fontSize": 24,
            "marginBottom": 0,
            "padding": 10,
            "textAlign": "center",
          },
        },
        "ref": null,
        "rendered": "Text",
        "type": [Function],
      },
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "activeOpacity": 0.2,
        "children": <View
          style={
            Object {
              "alignSelf": "center",
              "backgroundColor": "#40cd28",
              "borderRadius": 5,
              "elevation": 3,
              "flexDirection": "row",
              "margin": 0,
              "maxWidth": "100%",
              "overflow": "hidden",
            }
          }
        >
          <Unknown
            style={
              Object {
                "color": "#fff",
                "flex": 0,
                "fontSize": 24,
                "marginBottom": 0,
                "padding": 10,
                "textAlign": "center",
              }
            }
          >
            Text
          </Unknown>
        </View>,
        "disabled": undefined,
        "onPress": undefined,
        "style": Object {
          "alignSelf": "center",
          "borderRadius": 5,
          "maxWidth": "100%",
          "shadowColor": "#ccc",
          "shadowOffset": Object {
            "height": 2,
            "width": 0,
          },
          "shadowOpacity": 1,
          "shadowRadius": 1,
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <Unknown
            style={
              Object {
                "color": "#fff",
                "flex": 0,
                "fontSize": 24,
                "marginBottom": 0,
                "padding": 10,
                "textAlign": "center",
              }
            }
          >
            Text
          </Unknown>,
          "style": Object {
            "alignSelf": "center",
            "backgroundColor": "#40cd28",
            "borderRadius": 5,
            "elevation": 3,
            "flexDirection": "row",
            "margin": 0,
            "maxWidth": "100%",
            "overflow": "hidden",
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": "Text",
            "style": Object {
              "color": "#fff",
              "flex": 0,
              "fontSize": 24,
              "marginBottom": 0,
              "padding": 10,
              "textAlign": "center",
            },
          },
          "ref": null,
          "rendered": "Text",
          "type": [Function],
        },
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Button Estrutura exibe o botão com loading 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Button
    block={true}
    loading={true}
    rounded={true}
    size="normal"
    styleType="primary"
  >
    Text
  </Button>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "activeOpacity": 0.2,
      "children": <View
        style={
          Object {
            "alignSelf": "center",
            "backgroundColor": "#ccc",
            "borderRadius": 5,
            "elevation": 3,
            "flexDirection": "row",
            "margin": 0,
            "maxWidth": "100%",
            "overflow": "hidden",
          }
        }
      >
        <ActivityIndicator
          animating={true}
          color="#999"
          hidesWhenStopped={true}
          size="large"
          style={
            Object {
              "flex": 1,
              "padding": 10,
            }
          }
        />
      </View>,
      "disabled": true,
      "onPress": undefined,
      "style": Object {
        "alignSelf": "center",
        "borderRadius": 5,
        "maxWidth": "100%",
        "shadowColor": "#ccc",
        "shadowOffset": Object {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 1,
        "shadowRadius": 1,
      },
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <ActivityIndicator
          animating={true}
          color="#999"
          hidesWhenStopped={true}
          size="large"
          style={
            Object {
              "flex": 1,
              "padding": 10,
            }
          }
        />,
        "style": Object {
          "alignSelf": "center",
          "backgroundColor": "#ccc",
          "borderRadius": 5,
          "elevation": 3,
          "flexDirection": "row",
          "margin": 0,
          "maxWidth": "100%",
          "overflow": "hidden",
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "animating": true,
          "color": "#999",
          "hidesWhenStopped": true,
          "size": "large",
          "style": Object {
            "flex": 1,
            "padding": 10,
          },
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "activeOpacity": 0.2,
        "children": <View
          style={
            Object {
              "alignSelf": "center",
              "backgroundColor": "#ccc",
              "borderRadius": 5,
              "elevation": 3,
              "flexDirection": "row",
              "margin": 0,
              "maxWidth": "100%",
              "overflow": "hidden",
            }
          }
        >
          <ActivityIndicator
            animating={true}
            color="#999"
            hidesWhenStopped={true}
            size="large"
            style={
              Object {
                "flex": 1,
                "padding": 10,
              }
            }
          />
        </View>,
        "disabled": true,
        "onPress": undefined,
        "style": Object {
          "alignSelf": "center",
          "borderRadius": 5,
          "maxWidth": "100%",
          "shadowColor": "#ccc",
          "shadowOffset": Object {
            "height": 2,
            "width": 0,
          },
          "shadowOpacity": 1,
          "shadowRadius": 1,
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <ActivityIndicator
            animating={true}
            color="#999"
            hidesWhenStopped={true}
            size="large"
            style={
              Object {
                "flex": 1,
                "padding": 10,
              }
            }
          />,
          "style": Object {
            "alignSelf": "center",
            "backgroundColor": "#ccc",
            "borderRadius": 5,
            "elevation": 3,
            "flexDirection": "row",
            "margin": 0,
            "maxWidth": "100%",
            "overflow": "hidden",
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "animating": true,
            "color": "#999",
            "hidesWhenStopped": true,
            "size": "large",
            "style": Object {
              "flex": 1,
              "padding": 10,
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Button Estrutura exibe o botão com tamanho large 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Button
    block={true}
    rounded={true}
    size="large"
    styleType="primary"
  >
    Text
  </Button>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "activeOpacity": 0.2,
      "children": <View
        style={
          Object {
            "alignSelf": "center",
            "backgroundColor": "#40cd28",
            "borderRadius": 5,
            "elevation": 3,
            "flexDirection": "row",
            "margin": 0,
            "maxWidth": 250,
            "overflow": "hidden",
          }
        }
      >
        <Unknown
          style={
            Object {
              "color": "#fff",
              "flex": 1,
              "fontSize": 24,
              "marginBottom": 0,
              "padding": 10,
              "textAlign": "center",
            }
          }
        >
          Text
        </Unknown>
      </View>,
      "disabled": undefined,
      "onPress": undefined,
      "style": Object {
        "alignSelf": "center",
        "borderRadius": 5,
        "maxWidth": 250,
        "shadowColor": "#ccc",
        "shadowOffset": Object {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 1,
        "shadowRadius": 1,
      },
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <Unknown
          style={
            Object {
              "color": "#fff",
              "flex": 1,
              "fontSize": 24,
              "marginBottom": 0,
              "padding": 10,
              "textAlign": "center",
            }
          }
        >
          Text
        </Unknown>,
        "style": Object {
          "alignSelf": "center",
          "backgroundColor": "#40cd28",
          "borderRadius": 5,
          "elevation": 3,
          "flexDirection": "row",
          "margin": 0,
          "maxWidth": 250,
          "overflow": "hidden",
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": "Text",
          "style": Object {
            "color": "#fff",
            "flex": 1,
            "fontSize": 24,
            "marginBottom": 0,
            "padding": 10,
            "textAlign": "center",
          },
        },
        "ref": null,
        "rendered": "Text",
        "type": [Function],
      },
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "activeOpacity": 0.2,
        "children": <View
          style={
            Object {
              "alignSelf": "center",
              "backgroundColor": "#40cd28",
              "borderRadius": 5,
              "elevation": 3,
              "flexDirection": "row",
              "margin": 0,
              "maxWidth": 250,
              "overflow": "hidden",
            }
          }
        >
          <Unknown
            style={
              Object {
                "color": "#fff",
                "flex": 1,
                "fontSize": 24,
                "marginBottom": 0,
                "padding": 10,
                "textAlign": "center",
              }
            }
          >
            Text
          </Unknown>
        </View>,
        "disabled": undefined,
        "onPress": undefined,
        "style": Object {
          "alignSelf": "center",
          "borderRadius": 5,
          "maxWidth": 250,
          "shadowColor": "#ccc",
          "shadowOffset": Object {
            "height": 2,
            "width": 0,
          },
          "shadowOpacity": 1,
          "shadowRadius": 1,
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <Unknown
            style={
              Object {
                "color": "#fff",
                "flex": 1,
                "fontSize": 24,
                "marginBottom": 0,
                "padding": 10,
                "textAlign": "center",
              }
            }
          >
            Text
          </Unknown>,
          "style": Object {
            "alignSelf": "center",
            "backgroundColor": "#40cd28",
            "borderRadius": 5,
            "elevation": 3,
            "flexDirection": "row",
            "margin": 0,
            "maxWidth": 250,
            "overflow": "hidden",
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": "Text",
            "style": Object {
              "color": "#fff",
              "flex": 1,
              "fontSize": 24,
              "marginBottom": 0,
              "padding": 10,
              "textAlign": "center",
            },
          },
          "ref": null,
          "rendered": "Text",
          "type": [Function],
        },
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Button Estrutura exibe o botão primário 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Button
    block={true}
    rounded={true}
    size="normal"
    styleType="primary"
  >
    Text
  </Button>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "activeOpacity": 0.2,
      "children": <View
        style={
          Object {
            "alignSelf": "center",
            "backgroundColor": "#40cd28",
            "borderRadius": 5,
            "elevation": 3,
            "flexDirection": "row",
            "margin": 0,
            "maxWidth": "100%",
            "overflow": "hidden",
          }
        }
      >
        <Unknown
          style={
            Object {
              "color": "#fff",
              "flex": 1,
              "fontSize": 24,
              "marginBottom": 0,
              "padding": 10,
              "textAlign": "center",
            }
          }
        >
          Text
        </Unknown>
      </View>,
      "disabled": undefined,
      "onPress": undefined,
      "style": Object {
        "alignSelf": "center",
        "borderRadius": 5,
        "maxWidth": "100%",
        "shadowColor": "#ccc",
        "shadowOffset": Object {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 1,
        "shadowRadius": 1,
      },
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <Unknown
          style={
            Object {
              "color": "#fff",
              "flex": 1,
              "fontSize": 24,
              "marginBottom": 0,
              "padding": 10,
              "textAlign": "center",
            }
          }
        >
          Text
        </Unknown>,
        "style": Object {
          "alignSelf": "center",
          "backgroundColor": "#40cd28",
          "borderRadius": 5,
          "elevation": 3,
          "flexDirection": "row",
          "margin": 0,
          "maxWidth": "100%",
          "overflow": "hidden",
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": "Text",
          "style": Object {
            "color": "#fff",
            "flex": 1,
            "fontSize": 24,
            "marginBottom": 0,
            "padding": 10,
            "textAlign": "center",
          },
        },
        "ref": null,
        "rendered": "Text",
        "type": [Function],
      },
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "activeOpacity": 0.2,
        "children": <View
          style={
            Object {
              "alignSelf": "center",
              "backgroundColor": "#40cd28",
              "borderRadius": 5,
              "elevation": 3,
              "flexDirection": "row",
              "margin": 0,
              "maxWidth": "100%",
              "overflow": "hidden",
            }
          }
        >
          <Unknown
            style={
              Object {
                "color": "#fff",
                "flex": 1,
                "fontSize": 24,
                "marginBottom": 0,
                "padding": 10,
                "textAlign": "center",
              }
            }
          >
            Text
          </Unknown>
        </View>,
        "disabled": undefined,
        "onPress": undefined,
        "style": Object {
          "alignSelf": "center",
          "borderRadius": 5,
          "maxWidth": "100%",
          "shadowColor": "#ccc",
          "shadowOffset": Object {
            "height": 2,
            "width": 0,
          },
          "shadowOpacity": 1,
          "shadowRadius": 1,
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <Unknown
            style={
              Object {
                "color": "#fff",
                "flex": 1,
                "fontSize": 24,
                "marginBottom": 0,
                "padding": 10,
                "textAlign": "center",
              }
            }
          >
            Text
          </Unknown>,
          "style": Object {
            "alignSelf": "center",
            "backgroundColor": "#40cd28",
            "borderRadius": 5,
            "elevation": 3,
            "flexDirection": "row",
            "margin": 0,
            "maxWidth": "100%",
            "overflow": "hidden",
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": "Text",
            "style": Object {
              "color": "#fff",
              "flex": 1,
              "fontSize": 24,
              "marginBottom": 0,
              "padding": 10,
              "textAlign": "center",
            },
          },
          "ref": null,
          "rendered": "Text",
          "type": [Function],
        },
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Button Estrutura exibe o botão secundário 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Button
    block={true}
    rounded={true}
    size="normal"
    styleType="secondary"
  >
    Text
  </Button>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "activeOpacity": 0.2,
      "children": <View
        style={
          Object {
            "alignSelf": "center",
            "backgroundColor": "#33bdf2",
            "borderRadius": 5,
            "elevation": 3,
            "flexDirection": "row",
            "margin": 0,
            "maxWidth": "100%",
            "overflow": "hidden",
          }
        }
      >
        <Unknown
          style={
            Object {
              "color": "#fff",
              "flex": 1,
              "fontSize": 24,
              "marginBottom": 0,
              "padding": 10,
              "textAlign": "center",
            }
          }
        >
          Text
        </Unknown>
      </View>,
      "disabled": undefined,
      "onPress": undefined,
      "style": Object {
        "alignSelf": "center",
        "borderRadius": 5,
        "maxWidth": "100%",
        "shadowColor": "#ccc",
        "shadowOffset": Object {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 1,
        "shadowRadius": 1,
      },
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <Unknown
          style={
            Object {
              "color": "#fff",
              "flex": 1,
              "fontSize": 24,
              "marginBottom": 0,
              "padding": 10,
              "textAlign": "center",
            }
          }
        >
          Text
        </Unknown>,
        "style": Object {
          "alignSelf": "center",
          "backgroundColor": "#33bdf2",
          "borderRadius": 5,
          "elevation": 3,
          "flexDirection": "row",
          "margin": 0,
          "maxWidth": "100%",
          "overflow": "hidden",
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": "Text",
          "style": Object {
            "color": "#fff",
            "flex": 1,
            "fontSize": 24,
            "marginBottom": 0,
            "padding": 10,
            "textAlign": "center",
          },
        },
        "ref": null,
        "rendered": "Text",
        "type": [Function],
      },
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "activeOpacity": 0.2,
        "children": <View
          style={
            Object {
              "alignSelf": "center",
              "backgroundColor": "#33bdf2",
              "borderRadius": 5,
              "elevation": 3,
              "flexDirection": "row",
              "margin": 0,
              "maxWidth": "100%",
              "overflow": "hidden",
            }
          }
        >
          <Unknown
            style={
              Object {
                "color": "#fff",
                "flex": 1,
                "fontSize": 24,
                "marginBottom": 0,
                "padding": 10,
                "textAlign": "center",
              }
            }
          >
            Text
          </Unknown>
        </View>,
        "disabled": undefined,
        "onPress": undefined,
        "style": Object {
          "alignSelf": "center",
          "borderRadius": 5,
          "maxWidth": "100%",
          "shadowColor": "#ccc",
          "shadowOffset": Object {
            "height": 2,
            "width": 0,
          },
          "shadowOpacity": 1,
          "shadowRadius": 1,
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <Unknown
            style={
              Object {
                "color": "#fff",
                "flex": 1,
                "fontSize": 24,
                "marginBottom": 0,
                "padding": 10,
                "textAlign": "center",
              }
            }
          >
            Text
          </Unknown>,
          "style": Object {
            "alignSelf": "center",
            "backgroundColor": "#33bdf2",
            "borderRadius": 5,
            "elevation": 3,
            "flexDirection": "row",
            "margin": 0,
            "maxWidth": "100%",
            "overflow": "hidden",
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": "Text",
            "style": Object {
              "color": "#fff",
              "flex": 1,
              "fontSize": 24,
              "marginBottom": 0,
              "padding": 10,
              "textAlign": "center",
            },
          },
          "ref": null,
          "rendered": "Text",
          "type": [Function],
        },
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
